--- a/STSEval/account/templates/account/earnings.html
+++ b/STSEval/account/templates/account/earnings.html
@@ -6,7 +6,7 @@
     <br/>
     <div class="row no-gutters">
         <div class="col-3 pr-4" align="right">
-             <h2>Payments Account</h2>
+             <h2>Earnings Account</h2>
         </div>
         <div class="col-8 pt-2 pl-2" align="left">
              We use Stripe to process payouts.<br/>
@@ -18,7 +18,7 @@
                 {% elif account.requirements.eventually_due|length > 0 %}
                     Your account will eventually require more information in the future.  You can fill it out now by visiting the dashboard.
                 {% else %}
-                     Manage your account on the stripe dashboard.
+                     Manage your account and view detailed payout status on the stripe dashboard.
                 {% endif %}
                 <br/>
                 <a href="/account/stripe_goto_dashboard/"><button id="btnGotoDashboard" type="button" class="btn btn-main btn-long mt-2">Visit Dashboard</button></a>
@@ -39,8 +39,39 @@
             {% endif %}
         </div>
     </div>
+
+    <div class="row no-gutters pt-3">
+        <div class="col-3 pr-4" align="right">
+             <h2>Earnings</h2>
+        </div>
+        <div class="col-8 pt-2 pl-2" align="left">
+            <table cellpadding="0" cellspacing="0">
+                <tr>
+                    <td></td>
+                    <td class="pr-4" align="center" style="font-size:1.2rem">Session</td>
+                    <td class="pr-4 pl-4" align="center" style="font-size:1.2rem">Fee</td>
+                    <td class="pr-2 pl-2" align="center" style="font-size:1.2rem">Spectators</td>
+                    <td class="pr-4 pl-4" align="center" style="font-size:1.2rem">Your Earnings</td>
+                </tr>
+                {% for t in totals %}
+                    <tr {% if t.session__finished %}class="muted-text"{% endif %}>
+                        <td><span class="status-dot-small mr-1 athlete-dot mt-1 {% if t.session__finished %}status-dot-grey{% else %}status-dot-green{% endif %}"></span></td>
+                        <td class="pr-4">{{t.session__competition__date|date:'Y.m.d'}} {{t.session__competition__name}} - {{t.session__name}}</td>
+                        <td class="pr-4 pl-4" align="right">${{t.session__spectator_fee|floatformat:2}}</td>
+                        <td class="pr-4 pl-4" align="center"><a href="#" onclick="GetSpectatorList({{t.session_id}},'{{t.session__competition__name}} - {{t.session__name}}')">{{t.spectators}}</a></td>
+                        <td class="pr-4 pl-4" align="right">${{t.total|floatformat:2}}</td>
+                    </tr>
+                {% endfor %}
+                
+            </table>
+        </div>
+    </div>
    
 </div>
 
 {% endblock %}
 
+{% block scripts %}
+{% load staticfiles %}
+<script src="{% static 'app/scripts/spectator_export.js' %}"></script>
+{% endblock %}
