--- a/STSEval/management/templates/management/spectator_management.html
+++ b/STSEval/management/templates/management/spectator_management.html
@@ -36,7 +36,7 @@
         </div>
         <div class="col-8 pt-2 pl-2" align="left">
             {% if spectators|length > 0 %}
-                {{spectators|length}} spectators<br/><br/>
+                {{spectators|length}} spectators. <a href="#" style="font-size:.8rem" onclick="GetSpectatorList({{session.id}},'{{session.competition.name}} - {{session.name}}')">Download CSV List</a><br/><br/>
                 <div id="divSpectatorList" style="height:500px;overflow-y:auto">
                     <table cellpadding="0" cellspacing="0">
                         <tr>
@@ -64,6 +64,9 @@
 {% endblock %}
 
 {% block scripts %}
+
+{% load staticfiles %}
+<script src="{% static 'app/scripts/spectator_export.js' %}"></script>
 <script src="https://js.stripe.com/v3/"></script>
 <script type="text/javascript">
     var token = "{{ csrf_token }}";
