--- a/STSEval/account/templates/account/login.html
+++ b/STSEval/account/templates/account/login.html
@@ -24,7 +24,7 @@
             {% endif %}
           <button type="submit" class="btn btn-main mt-2">Login</button><br/><br/>
       
-      No Account? <a href="/account/signup/{{type}}/">Sign Up</a><br/>
+      No Account? <a href="/account/signup/{{type}}/">Sign Up</a><br/><br/>
       Forgot Password? <a href="/account/password_reset/">Request Password Reset</a>
         </form>
     <br/>
