--- a/STSEval/account/templates/account/earnings.html
+++ b/STSEval/account/templates/account/earnings.html
@@ -46,7 +46,7 @@
              <h2>Earnings</h2>
         </div>
         <div class="col-8 pt-2 pl-2" align="left">
-            Your earnings from competitions so far.
+            Your earnings from competitions so far.<br/>
             {% if totals|length > 0 %}
             <table cellpadding="0" cellspacing="0">
                 <tr>
