--- a/STSEval/app/templates/app/ejudge_select.html
+++ b/STSEval/app/templates/app/ejudge_select.html
@@ -3,7 +3,7 @@
 {% load staticfiles %}
 <div align="center">
     <h3>You will need both of these screens open to judge.</h3>
-    <a href="/evideo/"><button id="btnVideoStream" name="btnVideoStream" type="button" class="btn btn-main mt-2" style="width:250px">Video Stream</button></a><br/>
+    <a href="/evideo/"><button id="btnVideoStream" name="btnVideoStream" type="button" class="btn btn-main mt-2" style="width:250px">Video Stream</button></a><br/><br/>
     <a href="/ejudge/"><button id="btnJudge" name="btnJudge" type="button" class="btn btn-main mt-2" style="width:250px">Deduction Controller</button></a><br/>
 </div>
 {% endblock %}
