--- a/STSEval/management/templates/management/setup_finish.html
+++ b/STSEval/management/templates/management/setup_finish.html
@@ -46,7 +46,7 @@
                 You have already sent the email notice.  If you have made changes to judges, coaches or camera operator account you can send the notices again.
             {% endif %}
             <br/>
-            <button id="btnSendEmails" type="button" class="btn-main btn-wide pt-4 pb-4" style="border-radius: 1rem;" onclick="Send()">Send</button>
+            <button id="btnSendEmails" type="button" class="btn-main btn-wide pt-4 pb-4" style="border-radius: 1rem;" onclick="Send()">Send<br/>Notices</button>
             <br/><br/>
             {% if not session_active %}
                 {% if missed_athlete or missed_camera %}
@@ -66,13 +66,13 @@
     {% else %}
         {% if connect_status == 'details' %}
             This is your first competition with STSLiveGym, you need to complete your account setup to recieve payouts.<br/>
-            <a href="/account/stripe_connect_account/{{id}}"><button id="btnSetupAccount" type="button" class="btn btn-main btn-long mt-2">Finish Account Setup</button></a>
+            <a href="/account/stripe_connect_account/{{id}}"><button id="btnSetupAccount" type="button" class="btn btn-main btn-long mt-2">Finish Stripe Account Setup</button></a>
         {% elif connect_status == 'payouts' %}
             This is your first competition with STSLiveGym, you need to complete your account setup to recieve payouts.<br/>
-            <a href="/account/stripe_connect_account/{{id}}"><button id="btnSetupAccount" type="button" class="btn btn-main btn-long mt-2">Finish Account Setup</button></a>
+            <a href="/account/stripe_connect_account/{{id}}"><button id="btnSetupAccount" type="button" class="btn btn-main btn-long mt-2">Finish Stripe Account Setup</button></a>
         {% else %}
             This is your first competition with STSLiveGym, you need to setup your account to recieve payouts.<br/>
-            <a href="/account/stripe_connect_account/{{id}}"><button id="btnSetupAccount" type="button" class="btn btn-main btn-long mt-2">Setup Account</button></a>
+            <a href="/account/stripe_connect_account/{{id}}"><button id="btnSetupAccount" type="button" class="btn btn-main btn-long mt-2">Setup Stripe Account</button></a>
         {% endif %}
     {% endif %}
    
