--- a/STSEval/management/templates/management/setup_judges.html
+++ b/STSEval/management/templates/management/setup_judges.html
@@ -22,7 +22,7 @@
     <button href="#" id="btnSave" type="button" class="btn btn-main management-button-long" onclick="Save()">Save</button>
     <br/>
     <div id="divMissing" style="color:red;font-size:.85rem">&nbsp;</div>
-    <button href="#" id="btnImport" type="button" class="btn btn-main management-button-long" onclick="ImportJudgesStart()" data-toggle="modal" data-target="#modalMain">Import</button><br/>
+    <button href="#" id="btnImport" type="button" class="btn btn-main management-button-long" onclick="ImportJudgesStart()" data-toggle="modal" data-target="#modalMain">Import</button><br/><br/>
     <div>
         <button id="btnBack" type="button" class="btn-main pt-4 pb-4" style="border-radius: 1rem;" onclick="GoBack()">Return to<br/>Previous Page</button>
         <button id="btnNext" type="button" class="btn-main pt-4 pb-4" style="border-radius: 1rem;" onclick="NextClick()">Save and<br/>Continue (2/7)</button>
