--- a/STSEval/management/templates/management/setup_judges.html
+++ b/STSEval/management/templates/management/setup_judges.html
@@ -153,6 +153,7 @@
             $("#id_e2_email").attr("readonly", true);
             $("#id_e3_email").attr("readonly", true);
             $("#id_e4_email").attr("readonly", true);
+            $("btnImport").hide();
         }
         frm.submit(function () {
             console.log("forming");
